made avatar full-width on mobile (fixes #3)

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -198,9 +198,18 @@
 .avatar {
     width: 30%;
     float: right;
-    margin: 0 0 0.5em 0.5em;
-    border-radius: 0.5em;
+    margin: 0 0 $border-unit $border-unit;
+    border-radius: $border-unit;
     border: 2px solid #565656;
+}
+
+@include media-query($on-palm) {
+    .avatar {
+        float: none;
+        margin: 0;
+        width: -webkit-calc(100% - (#{$border-unit} / 2));
+        width:         calc(100% - (#{$border-unit} / 2));
+    }
 }
 
 
