--- a/css/main.scss
+++ b/css/main.scss
@@ -14,6 +14,8 @@ $base-line-height: 1.8;
 
 $spacing-unit:     30px;
 
+$border-unit:	   0.5em;
+
 $text-color:       #111;
 $background-color: #fdfdfd;
 $brand-color:      #2a7ae2;
